kubernetes/prod/froyo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: froyo
  labels:
    app: froyo
    env: prod
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: froyo
