kubernetes/prod/froyo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: froyo
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0
spec:
  rules:
    - host: froyo.ometria.email
      http:
        paths:
          - path: /
            backend:
              serviceName: froyo
              servicePort: 80
